@@ -1,4 +1,5 @@
 current:
+  * trim deep qrcode hierarchy
   * fix zero length symbol data
   * fix QR structured append result handling
   * cleanup SVG debug dump (partial)
